<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.everymarket.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.everymarket.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.everymarket.ui.write.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write" />

    <fragment
        android:id="@+id/navigation_notice"
        android:name="com.everymarket.ui.notice.ChatFragment"
        android:label="공지사항"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.everymarket.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>