<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WriteSellCategoryDetailActivity"
    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/category_card_digital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_digital"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_tv_24dp"/>
            <TextView
                android:id="@+id/category_digital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category01"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_funiture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_funiture"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_funiture_24dp"/>
            <TextView
                android:id="@+id/category_funiture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category02"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_clothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_clothes"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_clothes_24dp"/>
            <TextView
                android:id="@+id/category_clothes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category04"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_life"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_life_24dp"/>
            <TextView
                android:id="@+id/category_life"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category05"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_beauty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_beauty"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_beauty_24dp"/>
            <TextView
                android:id="@+id/category_beauty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category06"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_sports"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_sports_24dp"/>
            <TextView
                android:id="@+id/category_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category07"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_game"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_game_24dp"/>
            <TextView
                android:id="@+id/category_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category08"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_book"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_book_24dp"/>
            <TextView
                android:id="@+id/category_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category09"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_pet"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_pet_24dp"/>
            <TextView
                android:id="@+id/category_pet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category10"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/category_card_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:id="@+id/category_image_etc"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_etc_24dp"/>
            <TextView
                android:id="@+id/category_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:textSize="18dp"
                android:text="@string/category11"
                android:textColor="#000" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
